# gym_c-

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .gitpodignore  CMakeLists.txt  CMakeLists_WebAssembly.txt  Codespaces使用说明.md  GymManagementSystem.pro  QUICK_START_Gitpod.md  README.md  README_Gitpod.md  README_在线运行说明.md  StudentManagementSystem.pro  coach.cpp  coach.h  coachdialog.cpp  coachdialog.h  course.cpp  course.h  coursedialog.cpp  coursedialog.h  datamanager.cpp  datamanager.h  equipdialog.cpp  equipdialog.h  equipment.cpp  equipment.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  member.cpp  member.h  memberdialog.cpp  memberdialog.h  reservation.cpp  reservation.h  reservationdialog.cpp  reservationdialog.h  (+9 more)
.devcontainer/: devcontainer.json  setup.sh  手动安装Qt.sh
.gitpod/: quick-start.sh  setup.sh
